# bevy-game

./: .gitignore  Cargo.toml  Justfile  README.md
.cargo/: config.toml
src/: enemy.rs  main.rs  player.rs
src/components/: component.rs
src/scenes/: scene1.rs
