[package]
name = "bevy-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_asset = "0.12.1"
bevy_mod_picking = "0.17.0"
bevy_mod_reqwest = "0.12.0"
bevy_reflect = "0.12.1"
bevy_render = "0.12.1"
bevy_web_asset = "0.7.0"
bevy_window = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"

[dependencies.bevy-inspector-egui] 
version = "0.21.0"
optional = true

[dependencies.bevy_egui]
version = "0.23.0"
optional = true

[dependencies.egui]
version = "0.24.0"
optional = true

[dependencies.egui-gizmo]
version = "0.12.0"
optional = true

[dependencies.egui_dock]
version = "0.9.0"
optional = true

[features]
default = []
inspector = ["bevy-inspector-egui", "bevy_egui", "egui", "egui-gizmo", "egui_dock"]

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[profile.wasm-release]
# Use release profile as default values
inherits = "release"
# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"
# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"
# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
